Cleanup and improve FacesInitializer / CdiExtension